minor: fixed a small spacing issue in the tree view

--- a/public/styles/pages/tree.scss
+++ b/public/styles/pages/tree.scss
@@ -20,6 +20,7 @@
       cursor: pointer;
     }
 
+    padding-bottom: 1rem;
     display: flex;
   }
 
